test/invalid/Test2class/Test2class.plume

/**
 * 
 * Deve apenas existir uma classe por ficheiro
 *
 * @author 37029, Juliana Franco
 *
 */

class A extends Object is

class B extends Object is